download images from url and copy them to media folders afterwards